Fix OSS::Power select overflow & floating menu max-height

--- a/app/styles/base/_infinite-select.less
+++ b/app/styles/base/_infinite-select.less
@@ -14,7 +14,6 @@
 
 .upf-infinite-select__container {
   position: relative;
-  margin-bottom: @spacing-xx-sm;
 }
 
 .upf-infinite-select__items-container {
