--- a/app/styles/power-select.less
+++ b/app/styles/power-select.less
@@ -35,13 +35,9 @@
 .upf-power-select__dropdown {
   overflow: hidden;
 
-  .upf-infinite-select__container {
-    max-height: var(--floating-max-height);
-  }
-
   &:has(.upf-input) {
     .upf-infinite-select__items-container {
-      max-height: calc(var(--floating-max-height) - 62px);
+      max-height: calc(var(--floating-max-height) - 78px);
     }
   }
 }
